fix overflowing social icons

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -60,6 +60,7 @@ a {
 .socials {
 	display: flex;
 	flex-direction: row;
+	flex-wrap: wrap;
 	justify-content: flex-end;
 }
 
